load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "observe_lib",
    srcs = [
        "cmd_complete.go",
        "cmd_get.go",
        "cmd_help.go",
        "cmd_list.go",
        "cmd_login.go",
        "cmd_query.go",
        "commands.go",
        "config.go",
        "error.go",
        "gql.go",
        "help.go",
        "json.go",
        "main.go",
        "objecttype.go",
        "observe.go",
        "operate.go",
        "ot_dataset.go",
        "ot_workspace.go",
        "output.go",
        "propertytype.go",
        "pt_boolean.go",
        "pt_integer.go",
        "pt_orn.go",
        "pt_string.go",
        "request.go",
        "testfixture.go",
        "text.go",
        "util.go",
    ],
    embedsrcs = [
        "README.md",
        "docs/help.md",
        "docs/login.md",
        "docs/query.md",
        "docs/get.md",
        "docs/list.md",
    ],
    importpath = "observe/cmd/observe",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_posener_complete//:complete",
        "@com_github_spf13_pflag//:pflag",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_x_term//:term",
    ],
)

go_binary(
    name = "observe",
    embed = [":observe_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "observe_test",
    srcs = [
        "bench_test.go",
        "cmd_get_test.go",
        "cmd_list_test.go",
        "cmd_login_test.go",
        "cmd_query_test.go",
        "commands_test.go",
        "config_test.go",
        "observe_test.go",
        "operate_test.go",
        "text_test.go",
        "util_test.go",
    ],
    embed = [":observe_lib"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
