load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "observe_lib",
    srcs = [
        "cmd_complete.go",
        "cmd_delete.go",
        "cmd_get.go",
        "cmd_help.go",
        "cmd_list.go",
        "cmd_login.go",
        "cmd_query.go",
        "cmd_upload.go",
        "commands.go",
        "config.go",
        "doc_prompt.go",
        "error.go",
        "gql.go",
        "help.go",
        "json.go",
        "main.go",
        "objecttype.go",
        "observe.go",
        "operate.go",
        "ot_base.go",
        "ot_dataset.go",
        "ot_document.go",
        "ot_workspace.go",
        "output.go",
        "propertytype.go",
        "pt_boolean.go",
        "pt_integer.go",
        "pt_orn.go",
        "pt_string.go",
        "request.go",
        "testfixture.go",
        "text.go",
        "util.go",
    ],
    embedsrcs = [
        "README.md",
        "docs/help.md",
        "docs/login.md",
        "docs/query.md",
        "docs/get.md",
        "docs/list.md",
        "docs/upload.md",
        "docs/delete.md",
    ],
    importpath = "observe/cmd/observe",
    visibility = ["//visibility:private"],
    deps = [
        "//code/go/src/observe/vendor/github.com/posener/complete",
        "//code/go/src/observe/vendor/github.com/spf13/pflag",
        "//code/go/src/observe/vendor/golang.org/x/exp/constraints",
        "//code/go/src/observe/vendor/golang.org/x/exp/maps",
        "//code/go/src/observe/vendor/golang.org/x/exp/slices",
        "//code/go/src/observe/vendor/golang.org/x/term",
        "//code/go/src/observe/vendor/gopkg.in/yaml.v2:yaml_v2",
        "//code/go/src/observe/vendor/gopkg.in/yaml.v3:yaml_v3",
    ],
)

go_binary(
    name = "observe",
    embed = [":observe_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "observe_test",
    srcs = [
        "bench_test.go",
        "cmd_get_test.go",
        "cmd_list_test.go",
        "cmd_login_test.go",
        "cmd_query_test.go",
        "cmd_upload_test.go",
        "commands_test.go",
        "config_test.go",
        "doc_prompt_test.go",
        "objecttype_test.go",
        "observe_test.go",
        "operate_test.go",
        "ot_base_test.go",
        "ot_document_test.go",
        "release_test.go",
        "request_test.go",
        "text_test.go",
        "util_test.go",
    ],
    embed = [":observe_lib"],
    embedsrcs = [
        "bench_test.go",
        "cmd_complete.go",
        "cmd_get.go",
        "cmd_get_test.go",
        "cmd_help.go",
        "cmd_list.go",
        "cmd_list_test.go",
        "cmd_login.go",
        "cmd_login_test.go",
        "cmd_query.go",
        "cmd_query_test.go",
        "cmd_upload.go",
        "commands.go",
        "commands_test.go",
        "config.go",
        "config_test.go",
        "doc_prompt.go",
        "error.go",
        "gql.go",
        "help.go",
        "json.go",
        "main.go",
        "objecttype.go",
        "observe.go",
        "observe_test.go",
        "operate.go",
        "operate_test.go",
        "ot_base.go",
        "ot_base_test.go",
        "ot_dataset.go",
        "ot_document.go",
        "ot_workspace.go",
        "output.go",
        "propertytype.go",
        "pt_boolean.go",
        "pt_integer.go",
        "pt_orn.go",
        "pt_string.go",
        "release_test.go",
        "request.go",
        "testfixture.go",
        "text.go",
        "text_test.go",
        "util.go",
        "util_test.go",
        "doc_prompt_test.go",
        "objecttype_test.go",
        "ot_document_test.go",
        "cmd_upload_test.go",
        "request_test.go",
        "cmd_delete.go",
    ],
    deps = [
        "//code/go/src/observe/vendor/github.com/google/go-cmp/cmp",
        "//code/go/src/observe/vendor/github.com/stretchr/testify/assert",
    ],
)
